--- a/project-summary.html
+++ b/project-summary.html
@@ -1,4 +1,8 @@
-This registry contains data on Age-Adjusted Incidence Rates and Confidence Intervals for Cancer types by Age in the United States. Rates are per 100,000 persons and are age-adjusted to the 2000 U.S. standard population (19 age groups - Census P25-1130). Since 1994, CDC’s National Program of Cancer Registries (NPCR) has funded state cancer registries to collect population-based cancer incidence data under Public Law 102-515, the Cancer Registries Amendment Act.
+This registry contains data on Age-Adjusted Incidence Rates and Confidence Intervals for Cancer types by Age in the United States.
+Rates are per 100,000 persons and are age-adjusted to the 2000 U.S. standard population (19 age groups - Census P25-1130).
+Since 1994, CDC’s National Program of Cancer Registries (NPCR) has funded state cancer registries to collect population-based cancer incidence data under Public Law 102-515,
+the Cancer Registries Amendment Act.
 
 COMMERCIAL LICENSE
-For subscribing to a commercial license for John Snow Labs Data Library which includes all datasets curated and maintained by John Snow Labs please visit https://www.johnsnowlabs.com/marketplace.
+For subscribing to a commercial license for John Snow Labs Data Library which includes all datasets curated
+and maintained by John Snow Labs please visit https://www.johnsnowlabs.com/marketplace.
